Google site verification

--- a/public/404.html
+++ b/public/404.html
@@ -25,6 +25,7 @@
   <meta property="og:description" content="Vibhor Kashmira&#39;s personal website">
   <meta property="og:locale" content="en">
   <meta property="og:type" content="website">
+  <meta name="google-site-verification" content="n4mhrJa8kb_ntv33ucquyP5ERR4cqqfYGMBijwE1xG0" />
 
 
 
